--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
      - ./zabbix/ssl/keys:/var/lib/zabbix/ssl/keys
      - ./zabbix/ssl/ssl_ca:/var/lib/zabbix/ssl/ssl_ca
     links:
-     - zabbix-java-gateway:java-gateway
+     - zabbix-java-gateway
     env_file:
      - env.list
     entrypoint: /bin/bash
@@ -30,7 +30,7 @@ services:
     restart: unless-stopped
     image: digiapulssi/zabbix-java-gateway:latest
     container_name: zabbix-java-gateway
-    enviroment:
+    environment:
      - "ZBX_START_POLLERS=100"
      - "ZBX_TIMEOUT=30"
     cpu_quota: 50000
