--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '2'
 services:
-  zabbix-agent:
+  zabbix-proxy:
     restart: unless-stopped
     image: ${CONTAINER_IMAGE}:${CONTAINER_VERSION}
-    container_name: zabbix-agent
+    container_name: zabbix-proxy
     ports:
      - "10051:10051"
     volumes:
