--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,5 +32,5 @@ services:
     environment:
      - "ZBX_START_POLLERS=100"
      - "ZBX_TIMEOUT=30"
-     - "ZBX_HOSTNAME=0.0.0.0/0"
+     - "ZBX_SERVER_HOST=0.0.0.0/0"
     cpu_quota: 50000
